[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nanosdk"
version = "0.1.0"
description = "轻量级 Python Agent SDK - 支持工具调用、上下文管理、记忆、Agent Skills和Subagent"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "yurujie0"}
]
keywords = [
    "agent",
    "ai",
    "llm",
    "tools",
    "skills",
    "subagent",
    "memory",
    "context"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/yurujie0/nanosdk"
Repository = "https://github.com/yurujie0/nanosdk"

[tool.hatch.build.targets.wheel]
packages = ["src/nanosdk"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
